# eco_print2instapaper

./: .gitignore  README.md  eco_print2instapaper.py  eco_printed2instapaper.py  pyproject.toml
app/: .env-sample  economist_printedition.html  main.py  translator.py
app/output/: economist_20250324.md
